# Tensorrt-Deformable-Detr

./: .gitignore  LICENSE  README.md  demo.py  onnx_deformable_detr.py  requirements.txt
cpp/: CMakeLists.txt  backbone.hpp  common.hpp  deformableTransformer.cpp  get_wts.py  logging.h  neck.cpp  neck.hpp
